--- a/index.html
+++ b/index.html
@@ -97,8 +97,8 @@
         <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="zoom-in" data-aos-delay="200">
           <div class="icon-box">
             <div class="icon"><i class="ri-stack-line"></i></div>
-            <h4 class="title"><a href="">Lorem Ipsum</a></h4>
-            <p class="description">Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi</p>
+            <h4 class="title"><a href="">What do we do?</a></h4>
+            <p class="description">VWe develop a printed neural circuit board (PNCB) - technology that builds neural circuits with controlled structure.</p>
           </div>
         </div>
 
