--- a/index.html
+++ b/index.html
@@ -105,8 +105,8 @@
         <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="zoom-in" data-aos-delay="300">
           <div class="icon-box">
             <div class="icon"><i class="ri-palette-line"></i></div>
-            <h4 class="title"><a href="">Sed ut perspiciatis</a></h4>
-            <p class="description">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore</p>
+            <h4 class="title"><a href="">Why is this important?</a></h4>
+            <p class="description">Currently, drugs affecting neural functions are screened and/or tested using animal models, cell cultures or organoids. While animal models do not account for individual patients, cell cultures and organoids do not allow working with neural circuits with exact (precise) structure. Our technology will provide such solution.</p>
           </div>
         </div>
 
