--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>OnePage Bootstrap Template - Index</title>
+  <title>PNCB - Printed Neural Circuit Board</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -240,7 +240,7 @@
       </div>
     </section><!-- End About Video Section -->
 
-    <!-- ======= Clients Section ======= -->
+    <!-- ======= Clients Section ======= 
     <section id="clients" class="clients section-bg">
       <div class="container">
 
@@ -273,7 +273,7 @@
         </div>
 
       </div>
-    </section><!-- End Clients Section -->
+    </section>End Clients Section -->
 
     <!-- ======= Testimonials Section ======= -->
     <section id="testimonials" class="testimonials">
